# universe

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  imgui.ini  todo  todo.html  todo.json  todo_flat.html
resources/shaders/: basic.fs  basic.vs  light.fs  light.vs
resources/shaders/dx11/: basic.hlsl  common.hlsl  skybox.hlsl  skybox.hsls  unlit.hlsl  variables.hlsl
src/: context.cpp  context.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  geometry.cpp  geometry.hpp  gui.cpp  gui.hpp  input.cpp  input.hpp  main.cpp  platform.hpp  platform_win32.cpp  renderer.hpp  renderer_dx11.cpp  shaders.cpp  shaders.hpp  texture.hpp
src/app/: context.hpp  entity.cpp  entity.hpp  game_temp.cpp  input.hpp  main.cpp  memory.hpp  platform.hpp  platform_win32.cpp  platform_win32.hpp  renderer.hpp  renderer_dx11.cpp
src/common/: array.hpp  common.hpp  hash_map.hpp  heap_array.hpp  log.hpp  math.cpp  math.hpp  memory.cpp  memory.hpp  string.cpp  string.hpp  utils.hpp
src/game/: game.cpp  game.hpp  imgui.ini  math.hpp  rcommon.hpp  shaders.hpp
src/game/shaders/: basic.hpp  light.hpp
src/game/shaders/dx11/: basic.hpp
src/lib/: common.hpp  hash_map.hpp  heap_array.hpp  log.hpp  math.hpp  utils.hpp
src/shaders/dx11/: basic.hpp  unlit.hpp
src/shaders/opengl/: basic.hpp
